syntax = "proto3";

package proto;

option go_package = "github.com/cristiancll/qrpay-be/proto";

import "google/protobuf/timestamp.proto";

message User {
    string uuid = 1;
    string name = 2;
    int64 role = 3;
    string phone = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message UserCreateRequest {
    string name = 1;
    string phone = 3;
    string password = 4;
}
message UserCreateResponse {
    User user = 1;
}

message UserAdminCreatedRequest {
    string name = 1;
    string phone = 3;
}
message UserAdminCreatedResponse {
    User user = 1;
}

message UserUpdateRequest {
    string uuid = 1;
    string name = 2;
    string phone = 4;
    string password = 5;
}
message UserUpdateResponse {
    User user = 1;
}

message UserDeleteRequest {
    string uuid = 1;
}
message UserDeleteResponse { }


message UserGetRequest {
    string uuid = 1;
}
message UserGetResponse {
    User user = 1;
}

message UserListRequest {

}
message UserListResponse {
    repeated User users = 1;
}

message UserUpdateRoleRequest {
    string uuid = 1;
    int64 role = 2;
    bool enabled = 3;
}
message UserUpdateRoleResponse {
    User user = 1;
}

service UserService {
    rpc Create(UserCreateRequest) returns (UserCreateResponse);
    rpc AdminCreated(UserAdminCreatedRequest) returns (UserAdminCreatedResponse);
    rpc Update(UserUpdateRequest) returns (UserUpdateResponse);
    rpc Delete(UserDeleteRequest) returns (UserDeleteResponse);
    rpc Get(UserGetRequest) returns (UserGetResponse);
    rpc List(UserListRequest) returns (UserListResponse);
    rpc UpdateRole(UserUpdateRoleRequest) returns (UserUpdateRoleResponse);
}

